# adminforge-sbseg2026

./: .gitignore  README.md  pyproject.toml  run_claim1.sh  run_claim2.sh  run_claim3.sh
.github/workflows/: test.yml
adminforge/: authorized_keys.py  domain.py  exceptions.py  i18n.py  ssh_keys.py
adminforge/auditor/: jsonl_auditor.py
adminforge/cli/: completers.py  main.py  ui.py
adminforge/core/: i18n.py  main.py  nucleo.py  ssh_deployer.py
adminforge/deployer/: dry_run.py  ssh_deployer.py
adminforge/interfaces/: __init__.py  auditor.py  deployer.py  store.py
adminforge/planner/: planner.py
adminforge/store/: atomic.py  json_store.py  yaml_store.py
docs/: ARCHITECTURE.md  CONFIG.md  CONTRIBUTING.md  QUICKSTART.md  ROTEIRO.md  SECURITY.md  TOOL.md  USAGE.md
docs/usability-study/: GUIA_FACILITADOR.docx  GUIA_FACILITADOR.md  METODOLOGIA-OPCOES.docx  METODOLOGIA-OPCOES.md  QUESTIONARIO.md  README.md  ROTEIRO_PARTICIPANTE.docx  ROTEIRO_PARTICIPANTE.md  criar-formulario-consentimento.gs  criar-formulario-facilitador.gs  criar-formulario-google.gs
docs/usability-study/lab/: .gitignore  (+6 more)
infra/perf/: README.md  aggregate.py  claims.py  perflib.py  results.json  run_e1.py  run_e2.py  run_e3.py  run_e4.py
infra/testlab/: .gitignore  Dockerfile  ROTEIRO.md  docker-compose.yml
paper_data/: AVAILABILITY.md  study-responses.xlsx
tests/: conftest.py  test_auditor.py  test_cli.py  test_completers.py  test_edit_rename.py  test_fluxo_completo.py  test_i18n.py  test_nucleo.py  test_planner.py  test_ssh_keys.py  test_store.py
tests/integration/: test_lab.py
(+69 files in other folders)
