[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adminforge"
version = "0.1.0"
description = "CLI para gestão de identidades privilegiadas em frotas de servidores Linux"
authors = [{ name = "Cristhian Kapelinski" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
adminforge = "adminforge.cli.main:cli"

[tool.setuptools.packages.find]
include = ["adminforge*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
