[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adminforge"
version = "0.1.0"
description = "CLI para gestao de identidades privilegiadas em frotas de servidores Linux"
authors = [{ name = "BagualOps" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
adminforge = "adminforge.cli.main:main"

[tool.setuptools.packages.find]
include = ["adminforge*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
